--- a/assets/css/css/Collapse-card.css
+++ b/assets/css/css/Collapse-card.css
@@ -23,6 +23,14 @@
   border-color: var(--color-success);
 }
 
-.btn {
+.text-justify-custom {
+  text-align: justify;
+}
+
+.custom-hr {
+  border: none;
+  height: 2px;
+  background-color: #00b894;
+  margin: 1rem 0;
 }
 
